manifests/base/search-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-api-deployment
  namespace: search-api
  labels:
    app: search-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: search-api
      annotations:
        kubectl.kubernetes.io/default-container: search-api
    spec:
      restartPolicy: Always
      containers:
        - name: search-api
          image: wdoyle123/search-api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - name: search-api
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: v1/docs
              port: 8000
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: v1/docs
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 3
