manifests/base/search-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: search-db
  namespace: search-api
spec:
  serviceName: "search-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: search-db
  template:
    metadata:
      labels:
        app: search-db
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:17
          args:
            - "-c"
            - "shared_buffers=512MB"
            - "-c"
            - "work_mem=64MB"
            - "-c"
            - "maintenance_work_mem=256MB"
            - "-c"
            - "effective_cache_size=128MB"
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 1Gi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
