manifests/base/search-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-api-service
  namespace: search-api
spec:
  type: NodePort
  selector:
    app: search-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 32222
