manifests/base/search-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-db-service
  namespace: search-api
  labels:
    app: search-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: search-db
  type: ClusterIP
